test/classes/ferguson/forwarding/d-only-error.good
d-only-error.chpl:17: error: unresolved call 'Wrapper(unmanaged C).foo()'
d-only-error.chpl:11: note: this candidate did not match: C.foo()
d-only-error.chpl:17: note: because method call receiver with type 'Wrapper(unmanaged C)'
d-only-error.chpl:9: note: is passed to formal 'this: borrowed C'
